--- a/assets/css/logos-slider.css
+++ b/assets/css/logos-slider.css
@@ -10,7 +10,7 @@
 .logo-slider-section {
     width: 100%;
     overflow: hidden;
-    padding: 40px 0;
+    /* padding: 40px 0; */
     position: relative;
     background: var(--background-color, #ffffff);
 }
